--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+body {
+  height: 100vh;
+  background-color: #0076bc;
+}
+
 .App {
   text-align: center;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .App-logo {
