--- a/src/components/Ship.css
+++ b/src/components/Ship.css
@@ -1,16 +1,31 @@
 .ship {
     position: absolute;
-    width: 45px;
+    width: 25px;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
-    top: 80px;
+    top: 35px;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     -moz-transition: opacity 1s ease-in-out;
     -webkit-transition: opacity 1s ease-in-out;
 }
+
+@media screen and (min-width: 768px) {
+    .ship {
+        width: 45px;
+        top: 70px;
+    }
+}
+
+@media screen and (min-width: 1110px) {
+    .ship {
+        width: 55px;
+        top: 80px;
+    }
+}
+
 
 .sail {
     transform-box: fill-box;
