Added custom css variables

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --main-color: #3d8dcc;
+  --secondary-color: #223a8c;
+  --secondary-color-opacity: #223a8c8a;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
