--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -3,32 +3,65 @@
     top: 10px;
     right: 100px;
     transform: skew(-15deg, 5deg);
+    opacity: 0.3;
+}
+
+.lightbeam__container--online {
+    opacity: 0.9;
+}
+
+.lightbeam__container--connecting {
+    animation: flickering 30s infinite;
 }
 
 .lightbeam {
     width: 50px;
     height: 200px;
     border-radius: 0%;
-    background: conic-gradient(from -45deg at bottom,#00002b, #223a8c 1deg 90deg, #000 91deg);
-    -webkit-mask: linear-gradient(#223a8c8a, #3d8dcc00);
-    color: #162871;
+    background: conic-gradient(from -45deg at bottom,#00002b, var(--secondary-color) 1deg 90deg, #000 91deg);
+    -webkit-mask: linear-gradient(var(--secondary-color-opacity), #3d8dcc00);
     position: absolute;
     top: 13px;
 }
 
 .websocketOnline {
-    /*color: #ffc300;*/
-    background: #223a8c;
-    /* padding: 5px 4px; */
-    /* border-radius: 24px; */
+    background: var(--secondary-color);
     width: 50px;
     height: 30px;
     border-radius: 30px / 19px;
-
     font-size: 25px;
-    /* border: 2px solid #ffc300; */
     line-height: 31px;
     color: #ffffff;
-    /* color: #62d1c3; */
     position: absolute;
+}
+
+@keyframes flickering {
+    0% { opacity: 0.3 }
+    1% { opacity: 0.5 }
+    2% { opacity: 0.4 }
+    3% { opacity: 0.7 }
+    4% { opacity: 0.2 }
+    5% { opacity: 0.6 }
+    6% { opacity: 0.4 }
+    7% { opacity: 0.7 }
+    8% { opacity: 0.4 }
+    9% { opacity: 0.7 }
+    10% { opacity: 0.5 }
+    15% { opacity: 0.6 }
+    20% { opacity: 0.4 }
+    25% { opacity: 0.6 }
+    30% { opacity: 0.4 }
+    35% { opacity: 0.6 }
+    40% { opacity: 0.5 }
+    45% { opacity: 0.6 }
+    50% { opacity: 0.3 }
+    55% { opacity: 0.6 }
+    60% { opacity: 0.4 }
+    65% { opacity: 0.6 }
+    70% { opacity: 0.3 }
+    75% { opacity: 0.6 }
+    80% { opacity: 0.2 }
+    85% { opacity: 0.5 }
+    90% { opacity: 0.3 }
+    95% { opacity: 0.6 }
 }
