Mobile adapted online status

--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -1,9 +1,16 @@
 .lightbeam__container {
     position: absolute;
     top: 10px;
-    right: 100px;
-    transform: skew(-15deg, 5deg);
+    right: 43px;
+    transform: skew(-15deg, 5deg) scale(0.6);
     opacity: 0.3;
+}
+
+@media screen and (min-width: 768px) {
+    .lightbeam__container {
+        right: 65px;
+        transform: skew(-15deg, 5deg) scale(1);
+    }
 }
 
 .lightbeam__container--online {
