--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -1,3 +1,37 @@
+.online__message__container {
+    position: absolute;
+    top: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    animation: animateDown 3s forwards;
+}
+
+.online__message__text {
+    color: white;
+    font-size: 12px;
+    background-color: var(--secondary-color-opacity);
+    padding: 5px 10px;
+    border-radius: 13px;
+}
+
+@media screen and (min-width: 768px) {
+    .online__message__container {
+        top: 17px;
+        right: 90px;
+        left: auto;
+        animation: animateRight 3s forwards;
+    }
+    .online__message__text {
+        font-size: 14px;
+    }
+    .online__message__container i {
+        display: none;
+    }
+}
+
 .lightbeam__container {
     position: absolute;
     top: 10px;
@@ -71,4 +105,18 @@
     85% { opacity: 0.5 }
     90% { opacity: 0.3 }
     95% { opacity: 0.6 }
+}
+
+@keyframes animateDown {
+    0% { top: -30px; opacity: 0 }
+    25% { top: 12px; opacity: 1 }
+    70% { top: 12px; opacity: 1 }
+    100% { top: -30px; opacity: 0 }
+}
+
+@keyframes animateRight {
+    0% { right: 10px; opacity: 0 }
+    25% { right: 90px; opacity: 1 }
+    70% { right: 90px; opacity: 1 }
+    100% { right: 10px; opacity: 0 }
 }
