--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -6,7 +6,11 @@
     left: 0;
     right: 0;
     text-align: center;
-    animation: animateDown 3s forwards;
+    animation: animateDown 1s forwards;
+}
+
+.online__message__container--online {
+    animation: animateUp 2.5s forwards;
 }
 
 .online__message__text {
@@ -22,11 +26,17 @@
         top: 17px;
         right: 90px;
         left: auto;
-        animation: animateRight 3s forwards;
+        animation: animateLeft 1s forwards;
     }
+
+    .online__message__container--online {
+        animation: animateRight 2.5s forwards;
+    }
+
     .online__message__text {
         font-size: 14px;
     }
+
     .online__message__container i {
         display: none;
     }
@@ -34,7 +44,7 @@
 
 .lightbeam__container {
     position: absolute;
-    top: 10px;
+    top: 12px;
     right: 53px;
     transform: skew(-15deg, 5deg) scale(0.83);
     opacity: 0.3;
@@ -109,14 +119,22 @@
 
 @keyframes animateDown {
     0% { top: -30px; opacity: 0 }
-    25% { top: 12px; opacity: 1 }
-    70% { top: 12px; opacity: 1 }
+    100% { top: 12px; opacity: 1 }
+}
+
+@keyframes animateUp {
+    0% { top: 12px; opacity: 1 }
+    30% { top: 12px; opacity: 1 }
     100% { top: -30px; opacity: 0 }
 }
 
-@keyframes animateRight {
+@keyframes animateLeft {
     0% { right: 10px; opacity: 0 }
-    25% { right: 90px; opacity: 1 }
-    70% { right: 90px; opacity: 1 }
+    100% { right: 90px; opacity: 1 }
+}
+
+@keyframes animateRight {
+    0% { right: 90px; opacity: 1 }
+    30% { right: 90px; opacity: 1 }
     100% { right: 10px; opacity: 0 }
 }
