--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -6,6 +6,9 @@
     left: 0;
     right: 0;
     text-align: center;
+}
+
+.online__message__container--connecting {
     animation: animateDown 1s forwards;
 }
 
@@ -62,7 +65,7 @@
 }
 
 .lightbeam__container--connecting {
-    animation: flickering 30s infinite;
+    animation: flickering 10s infinite;
 }
 
 .lightbeam {
@@ -88,18 +91,12 @@
 
 @keyframes flickering {
     0% { opacity: 0.3 }
-    1% { opacity: 0.5 }
-    2% { opacity: 0.4 }
-    3% { opacity: 0.7 }
-    4% { opacity: 0.2 }
-    5% { opacity: 0.6 }
-    6% { opacity: 0.4 }
-    7% { opacity: 0.7 }
-    8% { opacity: 0.4 }
-    9% { opacity: 0.7 }
+    3% { opacity: 0.5 }
+    7% { opacity: 0.3 }
     10% { opacity: 0.5 }
-    15% { opacity: 0.6 }
-    20% { opacity: 0.4 }
+    13% { opacity: 0.3 }
+    15% { opacity: 0.5 }
+    20% { opacity: 0.3 }
     25% { opacity: 0.6 }
     30% { opacity: 0.4 }
     35% { opacity: 0.6 }
