--- a/src/components/Bridge.css
+++ b/src/components/Bridge.css
@@ -4,7 +4,7 @@
 
 .bridge {
     max-width: 80%;
-    margin-bottom: 60px;
+    margin-bottom: 70px;
 }
 
 .bridge__label {
@@ -39,10 +39,15 @@
     fill: url('#a');
 }
 
+@media screen and (min-width: 400px) {
+    .bridge {
+        margin-bottom: 100px;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .bridge {
         max-width: 65%;
-        margin-bottom: 100px;
     }
     .bridge__label {
         font-size: 22px;
@@ -62,12 +67,27 @@
     }
 }
 
+@media screen and (orientation: landscape) and (max-device-width: 1000px) {
+    .bridge {
+        margin-bottom: 50px;
+    }
+    .bridge__label {
+        margin-bottom: 15px;
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     .bridge__label {
         text-shadow: 0 0 8px #8383e2;
     }
     .bridge__foundation.raise, .bridge__moving__part.raise {
         filter: drop-shadow(0 0 6px #FF3D00);
+    }
+}
+
+@media screen and (orientation: landscape) and (max-device-width: 1300px) {
+    .bridge__label {
+        font-size: 25px;
     }
 }
 
