--- a/src/components/CircularTimer/CircularTimer.css
+++ b/src/components/CircularTimer/CircularTimer.css
@@ -1,11 +1,13 @@
-@keyframes growProgressBar {
+/*@keyframes growProgressBar {
 
-}
+}*/
 
 .counterCircle {
-    --size: 12rem;
-    --fg: #369;
+    --size: 2rem;
+    --fg: red; /*#369*/
     --bg: #def;
+    --value: 80;
+    --pgPercentage: var(--value);
     display: grid;
     place-items: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -14,12 +16,7 @@
     width: var(--size);
     height: var(--size);
     border-radius: 50%;
-    background: radial-gradient(closest-side, white 80%, transparent 0 99.9%), 
-    conic-gradient(var(--fg) calc(1%), var(--bg) 0);
-    animation: growProgressBar 3s 1 forwards; /* Kopplad till growProgressBar, som är tom */
-}
-
-div[role="progressbar"]::bar {
-    counter-reset: percentage car(--value);
-    content: counter(percentage) '%';
+    background: radial-gradient(closest-side, white 70%, transparent 0 99.9%), 
+    conic-gradient(var(--fg) calc((var(--pgPercentage))* 1%), var(--bg) 0);
+    /*animation: growProgressBar 3s 1 forwards; Kopplad till growProgressBar, som är tom */
 }
