--- a/src/components/WebsocketOnline.css
+++ b/src/components/WebsocketOnline.css
@@ -17,7 +17,7 @@
 }
 
 .online__message__text {
-    color: white;
+    color: #ffffff;
     font-size: 12px;
     background-color: var(--secondary-color-opacity);
     padding: 5px 10px;
