--- a/src/components/Bridge.css
+++ b/src/components/Bridge.css
@@ -43,6 +43,10 @@
     transform: rotate(180deg);
 }
 
+#gingerbreads-reverse path, #gingerbreads-reverse ellipse {
+    transform: rotate(180deg);
+}
+
 .hide circle {
     fill: none;
 }
