Fix gingerbread issue in firefox

--- a/src/components/Bridge.css
+++ b/src/components/Bridge.css
@@ -43,6 +43,13 @@
     transform: rotate(180deg);
 }
 
+@-moz-document url-prefix() {
+    #gingerbreads path, #gingerbreads ellipse, #gingerbreads-reverse rect, #gingerbreads-reverse path, #gingerbreads-reverse ellipse {
+        transform: rotate(150deg);
+    }
+}
+
+
 .hide circle {
     fill: none;
 }
